updated folder structure

--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
   "name": "ai-sugar",
   "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
-  "author": "",
-  "type": "commonjs",
-  "main": "index.js",
+  "description": "collection of syntactic sugar function helpers for working with AI apis",
+  "license": "UNLICENSED",
+  "author": "Samuel Karani Mbaabu",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tests": "npx tsx ai/ai.tests.ts"
+  },
+  "dependencies": {
+    "ai": "^4.3.16"
+  },
+  "devDependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/google": "^1.2.19",
+    "@ai-sdk/openai": "^1.3.22",
+    "@types/node": "^24.0.1",
+    "@vercel/node": "^5.2.2",
+    "dotenv": "^16.5.0",
+    "exa-js": "^1.8.17",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
   }
 }
