--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "ai-sugar",
   "version": "1.0.0",
-  "description": "collection of syntactic sugar function helpers for working with AI apis",
+  "description": "A set of utility functions powered by AI",
   "license": "UNLICENSED",
   "author": "Samuel Karani Mbaabu",
   "type": "module",
   "scripts": {
-    "tests": "npx tsx ai/ai.tests.ts"
+    "tests": "npx tsx tests/index.tests.ts"
   },
   "dependencies": {
-    "ai": "^4.3.16"
+    "ai": "^4.3.16",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/google": "^1.2.19",
     "@ai-sdk/openai": "^1.3.22",
     "@types/node": "^24.0.1",
-    "@vercel/node": "^5.2.2",
     "dotenv": "^16.5.0",
     "exa-js": "^1.8.17",
     "tsx": "^4.20.3",
