--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "ai-sugar",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A set of utility functions powered by AI",
   "license": "ISC",
   "author": "Samuel Karani Mbaabu",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "lint": "tsc",
+    "build": "npx tsup src/index.ts --format cjs,esm --dts",
     "tests": "npx tsx tests/index.tests.ts"
   },
   "dependencies": {
@@ -21,6 +24,7 @@
     "@types/node": "^24.0.1",
     "dotenv": "^16.5.0",
     "exa-js": "^1.8.17",
+    "tsup": "^8.5.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
