--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "resolveJsonModule": true,
     "moduleDetection": "force",
     "isolatedModules": true,
-    "verbatimModuleSyntax": true,
+    // "verbatimModuleSyntax": true,
 
     /* Strictness */
     "strict": true,
@@ -17,6 +17,7 @@
 
     /* If transpiling with TypeScript: */
     "module": "nodenext",
+    // "moduleResolution": "node",
     "outDir": "dist",
     "sourceMap": true,
 
