--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "scripts": {
     "lint": "tsc",
     "build": "npx tsup src/index.ts --format cjs,esm --dts",
-    "tests": "npx tsx tests/index.ts"
+    "test": "npx tsx tests/index.ts"
   },
   "dependencies": {
     "ai": "^4.3.16",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zod-sugar": "^1.0.2"
   },
   "devDependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
